--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
   <script src='js/main.js'></script>
 </head>
 <body>
+  <h1>coming soon</h1>
+  <p>HI</p>
+  <img src="wwww.fillmurray.com/400/400" alt="bill">
 
 </body>
 </html>
