still more bill

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 <body>
   <h1>coming soon</h1>
   <p>HI</p>
-  <img src="wwww.fillmurray.com/400/400" alt="bill">
+  <img src="http://fillmurray.com/400/400" alt="bill">
+  <img src="http:/fillmurray.com/500/400" alt="bill">
 
 </body>
 </html>
