--- a/index.html
+++ b/index.html
@@ -4,15 +4,122 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Github Pages Demo</title>
-  <link rel ='stylesheet' href='css/style.css'>
-  <script src='js/main.js'></script>
+  <script src="js/jquery.js"></script>
+  <script src="js/portfolio.js"></script>
+  <link rel="stylesheet" href="css/animate.css">
+  <link rel="stylesheet" href="font-awesome-4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <title>Libby Coy</title>
 </head>
 <body>
-  <h1>coming soon</h1>
-  <p>HI</p>
-  <img src="http://fillmurray.com/400/400" alt="bill">
-  <img src="http:/fillmurray.com/500/400" alt="bill">
+  <div id="mySidenav" class="sidenav">
+    <div class="links">
+    <a href="#work" id="the-work">work</a>
+    <a href="#about" id="the-about">about</a>
+    <a href="#contact" id="the-contact">contact</a>
+    </div>
+  </div>
 
+  <div class="main">
+
+
+  <section class="intro">
+    <div class="box"></div>
+    <div class="intro-text">
+      <div class="text">
+        <p class="libby">Hi I am Libby</p>
+        <p class="title">Hi I am Libby</p>
+        <p class="descript"><span>I'm a digital designer and developer</span></p>
+        <p class="descript"><span>from Los Angeles currently residing in Sydney</span></p>
+      </div>
+    </div>
+    <div class="side-text"><a href="#"><p class="see-more">projects ></p></a></div>
+  </section>
+
+
+
+  <section class="work-sec" id="work">
+      <div class="work one">
+        <div class="work-box project-3">
+          <div class="text-clause" id="draw-gun">
+          <h1>Browser Infographic</h1>
+          <p class="subtitle-small">HTML CSS JAVASCRIPT</p>
+          <p class="about">This is an animated infographic about firearm statistics in the US and Australia. I have created a lot of infographics as a graphic designer so I decided to create this infographic to visualise data using Chartjs. The app also features a live voting system using Ajax.</p>
+          <p><a href="https://github.com/libbycoy/project3" target="blank"><i class="fa fa-code fa-1x"></i></a> <a href="http://aus-usa.herokuapp.com/" target="blank"><i class="fa fa-link fa-1x"></i></a> </p>
+          </div>
+          <div class="gun"></div>
+
+        </div>
+        <div class="work-box project-1">
+          <div class="drawing"></div>
+          <div class="text-clause" id="draw-draw">
+          <h1>Rails App with canvas</h1>
+          <p class="subtitle-small">HTML CSS JAVASCRIPT</p>
+          <p class="about">Mindful Drawwwing is a social web app database that allows users to login, sign up and create digital paintings, using the currently popular practice of “Mindful Colouring” in the browser.</p>
+          <p><a href="https://github.com/libbycoy/project1" target="blank"><i class="fa fa-code fa-1x"></i></a> <a href="https://painterly.herokuapp.com/" target="blank"><i class="fa fa-link fa-1x"></i></a>    </p>
+        </div>
+        </div>
+      </div>
+
+      <div class="work two">
+        <div class="work-box project-2">
+          <div class="game"></div>
+          <div class="text-clause" id="draw-game">
+          <h1>Phaser Game</h1>
+          <p class="subtitle-small">HTML CSS JAVASCRIPT</p>
+          <p class="about">The Wealth Redistribution Simulator is a multi-level game built in Phaser for a group project at General Assembly.</p>
+          <p><a href="https://github.com/libbycoy/project-two" target="blank"><i class="fa fa-code fa-1x"></i></a>   <a href="https://github.com/libbycoy/project-two" target="blank"><i class="fa fa-link fa-1x"></i></a>   </p>
+        </div>
+        </div>
+        <div class="work-box project-0">
+          <div class="blog"></div>
+          <div class="text-clause" id="draw-blog">
+          <h1>Blog</h1>
+          <p class="subtitle-small">HTML CSS JAVASCRIPT</p>
+          <p class="about">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam iusto beatae a, quas laboriosam, omnis tempora nisi dolorum, ipsa, eius quasi est. Cum cumque culpa deserunt, sed nemo quod nesciunt.</p>
+          <p><a href="https://github.com/libbycoy/teaparty" target="blank"><i class="fa fa-code fa-1x"></i></a> <a href="https://github.com/libbycoy/project1" target="blank"><i class="fa fa-link fa-1x"></i></a> </p>
+        </div>
+      </div>
+
+    </div>
+  </section>
+
+  <section class="work-sec" id="about">
+
+        <div id="content">
+          <div class="about-box"></div>
+          <div class="about-content">
+          <p class='libby-two'>The story of a baby unicorn</p>
+                <p class="subtitle">
+                A front-end dev with a design background
+               </p>
+               <p class="bodytext">
+               "hi i am jennmoneydollars. i'm an artist in jersey city (on purpose) and an open web engineer at a cool company called bocoup. when i'm not building open web apps with the coolest folks in the game, i'm making art with code, telling jokes, and getting yelled at on the internet. my visual art has been described as "neon abstract pixel erotica" and my tech satire has been described as "your eyes are awful, like you are also awful".
+               <br>
+               <br>
+               in a past life i was an engineer at the nba which stands for basketball and, before that, taught and evaluated computer science education at montclair state university – where I got my bs and ms in computer science. i'm the founder/organizer of jerseyscript, a front-end developer meetup based in nj, and i co-emcee the world-renowned and bespoke kale-loving brooklyn js!"
+              </p>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+              <i class="fa fa-camera-retro fa-2x"></i>
+
+        			</div>
+      </section>
+
+  <section class="footer" id="contact">
+
+    <div><a href="mailto:libbycoy23@gmail.com" target="_blank" ><i class="fa fa-envelope-o fa-4x"></i></a></div>
+    <div><a href="https://github.com/libbycoy" target="_blank" ><i class="fa fa-github-alt fa-4x"></i></a></div>
+    <div><a href="https://twitter.com/labelmelibby" target="_blank" ><i class="fa fa-twitter fa-4x"></i></a></div>
+    <div><a href="https://au.linkedin.com/in/libbycoy" target="_blank" ><i class="fa fa-linkedin fa-4x"></i></a></div>
+
+  </section>
+
+</div>
 </body>
 </html>
